force-app/main/default/objects/DM_Non_Organic__c/DM_Non_Organic__c.object-meta.xml
<CustomObject>
    <label>Non-Organic Approval</label>
    <nameField>
        <displayFormat>NO-{0000}</displayFormat>
        <label>Non-Organic Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non-Organic Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>