force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Active_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>DM_Active_Ingredients__c</fullName>
    <label>Active Ingredients</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>