force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>