force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Not Yet Submitted</fullName>
                <default>true</default>
                <label>Not Yet Submitted</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>