force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Commercial_Avail_Search_Conducted__c.field-meta.xml
<CustomField>
    <fullName>DM_Commercial_Avail_Search_Conducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Availability Search Conducted</label>
    <type>Checkbox</type>
</CustomField>