force-app/main/default/objects/DM_Non_Organic__c/fields/DM_GMO_Free_Verification__c.field-meta.xml
<CustomField>
    <fullName>DM_GMO_Free_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the supplier has verified the seed is non-GMO.</inlineHelpText>
    <label>GMO-Free Verification</label>
    <type>Checkbox</type>
</CustomField>