force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Inquiry_Date__c</fullName>
    <label>Inquiry Date</label>
    <type>Date</type>
</CustomField>