force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Justification_for_Non_Organic_Use__c.field-meta.xml
<CustomField>
    <fullName>DM_Justification_for_Non_Organic_Use__c</fullName>
    <label>Justification for Non-Organic Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Commercially Available</fullName>
            </value>
            <value>
                <fullName>Specific Variety Not Available</fullName>
            </value>
            <value>
                <fullName>Insufficient Supply</fullName>
            </value>
            <value>
                <fullName>Region-Specific Adaptation</fullName>
            </value>
            <value>
                <fullName>Late-Season Emergency</fullName>
            </value>
            <value>
                <fullName>Germination or Quality Issues</fullName>
            </value>
            <value>
                <fullName>Organic Equivalent Not Suitable for Certified System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>