force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Justification_for_Treated_Seed_Use__c.field-meta.xml
<CustomField>
    <fullName>DM_Justification_for_Treated_Seed_Use__c</fullName>
    <label>Justification for Treated Seed Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disease Prevention</fullName>
            </value>
            <value>
                <fullName>Low Germination in Untreated Seed</fullName>
            </value>
            <value>
                <fullName>No Organic Alternative Available</fullName>
            </value>
            <value>
                <fullName>Environmental Adaptation</fullName>
            </value>
            <value>
                <fullName>Pest Resistance</fullName>
            </value>
            <value>
                <fullName>Required by Buyer or Contract</fullName>
            </value>
            <value>
                <fullName>Specialized Crop Variety Not Available as Organic</fullName>
            </value>
            <value>
                <fullName>Late-Season Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>