force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Material__c.field-meta.xml
<CustomField>
    <fullName>DM_Material__c</fullName>
    <label>Seed / Planting Stock</label>
    <referenceTo>DM_Material__c</referenceTo>
    <relationshipLabel>Non-Organic Approvals</relationshipLabel>
    <relationshipName>Non_Organic_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>