force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Org_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DM_Org_Approval_Status__c</fullName>
    <formula>TEXT( DM_Material__r.DM_Organic_Status_Verification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>