force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Organic_Seed_Suppliers_Contacted__c.field-meta.xml
<CustomField>
    <fullName>DM_Organic_Seed_Suppliers_Contacted__c</fullName>
    <label>Organic Seed Suppliers Contacted</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>