force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Seed_Treatment__c.field-meta.xml
<CustomField>
    <fullName>DM_Seed_Treatment__c</fullName>
    <label>Seed Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pelleted Seeds</fullName>
            </value>
            <value>
                <fullName>Inoculated</fullName>
            </value>
            <value>
                <fullName>Biological Fungicide Treatment</fullName>
            </value>
            <value>
                <fullName>Hot Water Treatment</fullName>
            </value>
            <value>
                <fullName>Primed Seeds</fullName>
            </value>
            <value>
                <fullName>Coated Seeds</fullName>
            </value>
            <value>
                <fullName>Fungicide-Treated (Synthetic)</fullName>
            </value>
            <value>
                <fullName>Insecticide-Treated (Synthetic)</fullName>
            </value>
            <value>
                <fullName>Hormone or Growth Regulator Treated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>