force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Seed_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Seed_Type__c</fullName>
    <label>Seed / Planting Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transitional Organic</fullName>
            </value>
            <value>
                <fullName>Non-Organic, Untreated</fullName>
            </value>
            <value>
                <fullName>Non-Organic, Treated</fullName>
            </value>
            <value>
                <fullName>Non-GMO Verified</fullName>
            </value>
            <value>
                <fullName>Heirloom</fullName>
            </value>
            <value>
                <fullName>Hybrid (Non-GMO)</fullName>
            </value>
            <value>
                <fullName>GMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>