force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>