force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Treatment_Date__c</fullName>
    <label>Treatment Date</label>
    <type>Date</type>
</CustomField>