force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Treatment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>DM_Treatment_Manufacturer__c</fullName>
    <label>Treatment Manufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>