force-app/main/default/objects/DM_Non_Organic__c/fields/DM_Treatment_Status_Verification__c.field-meta.xml
<CustomField>
    <fullName>DM_Treatment_Status_Verification__c</fullName>
    <label>Treatment Status Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OMRI</fullName>
            </value>
            <value>
                <fullName>WSDA</fullName>
            </value>
            <value>
                <fullName>NOP Seal</fullName>
            </value>
            <value>
                <fullName>Certifier Review &amp; Approval</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>