force-app/main/default/objects/DM_Non_Organic__c/recordTypes/DM_Non_Organic_Seed_Planting_Stock_Part_B.recordType-meta.xml
<RecordType>
    <fullName>DM_Non_Organic_Seed_Planting_Stock_Part_B</fullName>
    <active>true</active>
    <description>Approval to use non-organic seed or planting stock.</description>
    <label>Non-Organic Seed/Planting Stock (Part B)</label>
</RecordType>