force-app/main/default/objects/DM_Non_Organic__c/recordTypes/DM_Seed_Treatments.recordType-meta.xml
<RecordType>
    <fullName>DM_Seed_Treatments</fullName>
    <active>true</active>
    <description>Approval to use seed treatments, coatings and inoculants.</description>
    <label>Seed Treatments (Part C)</label>
</RecordType>